# terminal-games

./: CLAUDE.md  LICENSES_DATA.md  README.md  pyproject.toml
.github/: homebrew-tap-workflow.yml
.github/workflows/: publish.yml
scripts/: build_wordle_answers.py
terminal_games/: __init__.py  __main__.py  main.py
terminal_games/data/: __init__.py  words_common.txt  words_wordle_answers.txt  words_wordle_valid.txt
terminal_games/games/: __init__.py  hangman.py  minesweeper.py  snake.py  tetris.py  twenty48.py  wordle.py
