[project]
name = "terminal-games"
version = "0.1.0"
description = "A collection of classic mini games you can play right in your terminal 🎮"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Ayush Raj" },
]
keywords = ["terminal", "games", "cli", "tetris", "snake", "minesweeper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Puzzle Games",
]
dependencies = [
    "blessed>=1.32.0",
]

[project.scripts]
terminal-games = "terminal_games.main:main"

[tool.hatch.build.targets.wheel]
packages = ["terminal_games"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
